Add the ability to trace methods in internal builds.
Currently only for internal builds. Use the @Trace annotation to trace
methods for viewing in Perfetto.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,15 @@ buildscript {
         jcenter {
             content {
                 includeVersion 'org.jetbrains.trove4j', 'trove4j', '20160824'
+                includeGroupByRegex "com\\.archinamon.*"
             }
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.0.2'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
+        classpath 'com.archinamon:android-gradle-aspectj:4.2.0'
     }
 }
 
@@ -25,8 +27,21 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'witness'
+apply plugin: 'com.archinamon.aspectj-ext'
 apply from: 'translations.gradle'
 apply from: 'witness-verifications.gradle'
+
+if (getGradle().getStartParameter().getTaskRequests().toString().contains("Internal")) {
+    aspectj {
+        includeJar 'sqlcipher'
+        includeAspectsFromJar 'Signal-Android'
+        java = JavaVersion.VERSION_1_8
+    }
+} else if (getGradle().getStartParameter().getTaskRequests().toString().contains("Test")) {
+    aspectj {
+        compileTests = false
+    }
+}
 
 repositories {
     maven {
@@ -144,6 +159,7 @@ android {
         buildConfigField "String", "ZKGROUP_SERVER_PUBLIC_PARAMS", "\"AMhf5ywVwITZMsff/eCyudZx9JDmkkkbV6PInzG4p8x3VqVJSFiMvnvlEKWuRob/1eaIetR31IYeAbm0NdOuHH8Qi+Rexi1wLlpzIo1gstHWBfZzy1+qHRV5A4TqPp15YzBPm0WSggW6PbSn+F4lf57VCnHF7p8SvzAA2ZZJPYJURt8X7bbg+H3i+PEjH9DXItNEqs2sNcug37xZQDLm7X0=\""
         buildConfigField "String[]", "LANGUAGES", "new String[]{\"" + autoResConfig().collect { s -> s.replace('-r', '_') }.join('", "') + '"}'
         buildConfigField "int", "CANONICAL_VERSION_CODE", "$canonicalVersionCode"
+        buildConfigField "int", "TRACE_EVENT_MAX", "2000"
 
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
@@ -243,6 +259,7 @@ android {
             ext.websiteUpdateUrl = "null"
             buildConfigField "boolean", "PLAY_STORE_DISABLED", "false"
             buildConfigField "String", "NOPLAY_UPDATE_URL", "$ext.websiteUpdateUrl"
+            buildConfigField "int", "TRACE_EVENT_MAX", "30_000"
         }
 
         prod {
@@ -424,7 +441,6 @@ dependencies {
 dependencyVerification {
     configuration = '(play|website)(Prod|Staging)(Debug|Release)RuntimeClasspath'
 }
-
 
 def assembleWebsiteDescriptor = { variant, file ->
     if (file.exists()) {
