--- a/app/build.gradle
+++ b/app/build.gradle
@@ -364,7 +364,8 @@ dependencies {
 
     implementation project(':libsignal-service')
     implementation 'org.signal:zkgroup-android:0.7.0'
-
+    implementation 'org.whispersystems:signal-client-android:0.1.3'
+    implementation 'com.google.protobuf:protobuf-javalite:3.10.0'
     implementation 'org.signal:argon2:13.1@aar'
 
     implementation 'org.signal:ringrtc-android:2.8.0'
