--- a/app/build.gradle
+++ b/app/build.gradle
@@ -316,6 +316,7 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'C:\\Junit Folder', include: ['*.aar', '*.jar'], exclude: [])
     lintChecks project(':lintchecks')
 
     implementation ('androidx.appcompat:appcompat:1.2.0') {
